--- a/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
+++ b/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="ThongTinForm.resx">
       <DependentUpon>ThongTinForm.cs</DependentUpon>
@@ -98,6 +99,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\theme.nuoc.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\462562774_592022609906761_4693132546816527179_n.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
