--- a/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
+++ b/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="formChinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formChinh.Designer.cs">
+      <DependentUpon>formChinh.cs</DependentUpon>
+    </Compile>
     <Compile Include="NguoiDung.cs" />
     <Compile Include="NhacNho.cs" />
     <Compile Include="Program.cs" />
@@ -73,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formChinh.resx">
+      <DependentUpon>formChinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
