--- a/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
+++ b/NhacNhoUongNuoc1/NhacNhoUongNuoc1.csproj
@@ -64,6 +64,12 @@
     <Compile Include="formChinh.Designer.cs">
       <DependentUpon>formChinh.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormLichSu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormLichSu.Designer.cs">
+      <DependentUpon>FormLichSu.cs</DependentUpon>
+    </Compile>
     <Compile Include="NguoiDung.cs" />
     <Compile Include="NhacNho.cs" />
     <Compile Include="Program.cs" />
@@ -82,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formChinh.resx">
       <DependentUpon>formChinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLichSu.resx">
+      <DependentUpon>FormLichSu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
